<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.trivialquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/header"
                android:layout_margin="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag1"
                    android:layout_margin="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <CheckBox
                        style="@style/Text"
                        android:id="@+id/A1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question1_answer1"/>

                    <CheckBox
                        style="@style/Text"
                        android:id="@+id/A2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question1_answer2"/>

                    <CheckBox
                        style="@style/Text"
                        android:id="@+id/A3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question1_answer3"/>

                    <CheckBox
                        style="@style/Text"
                        android:id="@+id/A4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question1_answer4"/>

                </LinearLayout>

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag2"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/B1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer1"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/B2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer2"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/B3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer3"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/B4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question2_answer4"/>

                </RadioGroup>

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag3"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <EditText
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="type here"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:inputType="textMultiLine"/>

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag4"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/D1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question4_answer1"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/D2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question4_answer2"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/D3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question4_answer3"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/D4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/question4_answer4"/>

                </RadioGroup>

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag5"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/E1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer1"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/E2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer2"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/E3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer3"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/E4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question5_answer4"/>

                </RadioGroup>

                <TextView
                    style="@style/Tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag6"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/F1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question6_answer1"/>

                    <TextView
                        style="@style/Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"/>

                    <RadioButton
                        style="@style/Text"
                        android:id="@+id/F2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question6_answer2"/>

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/submitAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:onClick="sumbitAnswers"
                android:text="@string/submit" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>